# LLMOPS_RAG_V2

./: .gitignore  README.md  main.py  pyproject.toml  test.py
multi_doc_chat/: config.yaml  config_loader.py  custom_exception.py  custom_logger.py  load_documents.py
notebooks/: RAG.ipynb
